--- a/webapp/css/center.css
+++ b/webapp/css/center.css
@@ -16,15 +16,16 @@
 .left-list2 li {height: 2rem;margin-bottom: .4rem;line-height: 2rem;}
 .left-list2 li img {display: none;}
 .left-list2 .active-list {background:rgba(18,18,22,.3);}
-.left-list2 .active-list img {display:inline-block;margin: 0 .8rem 0 -1.6rem;}
+.left-list2 .active-list img {display:inline-block;margin: 0 .8rem 0 -1.55rem;}
 
 /* 修改头像内容 */
-.center-update {display: none;}
+.center-update {display: block;}
+.update-content {display: flex;}
 .center-center {width: 20.1rem;margin: 0 4rem 0 3.2rem;}
 .center-center p {font-size: .7rem;color:rgba(255,255,255,.5);padding: 1.2rem 0;}
 .center-center h5 {font-size: .7rem;color: #fff;padding: 1.7rem 0 1.6rem;}
 .center-center ul {display: flex;align-items: center;justify-content: space-between;}
-.center-center .default-img {position: relative;width: 19.9rem;height:19.9rem;background:rgba(29,30,43,.4);
+.center-center .default-img {position: relative;max-width: 19.9rem;height:19.9rem;background:rgba(29,30,43,.4);
   margin: 1.6rem 0;}
 .center-center .center-btn {width: 7.5rem;font-size: .7rem;color: #434661;border: 0;border-radius: .5rem;background: #fff;}
 .center-btn-list {display: flex;font-size: .7rem;}
@@ -53,48 +54,105 @@
 .center-ongoing {display: none;}
 .info-contetn {padding: 3.5rem 4.8rem 4.4rem 4.6rem;font-size: .8rem;}
 .error-btn {width: 5.5rem;background:#fb2828;border-color: #fb2828;}
-.ongoing-btn {width: 4.5rem;background:#ffa84b;border-color: #ffa84b;}
-.success-btn {width: 5rem;background:#ffa84b;border-color: #ffa84b;}
+.success-btn {background:#ffa84b;border-color: #ffa84b;padding: 0 1rem;}
 
 .info-txt1 {padding: 1.4rem 0 1rem;}
 .info-txt2 {padding: 1.5rem 0 .6rem;}
 .info-txt3 {font-size: .7rem;padding-left: 1.1rem;}
 .info-top {margin: 1.2rem 0 2rem;}
+.ongoing-list {display: flex;align-items: center;flex-wrap: wrap;}
 .ongoing-list span {padding-left: .6rem;font-size: .7rem;}
 .info-txt-list {height: 7.1rem;border-radius:.5rem;margin-bottom: 1.25rem;padding: 1.25rem 1.35rem;
   line-height: 1.5;width: 100%;resize: none;border: 0;}
 .reset-btn {width: 10.75rem;border:0;color: #434561;}
+
+/* 申请失败 */
+.center-failure {display: none;}
 
 /* 我的上榜信息 申请成功 */
 .center-success {display: none;}
 .success-content {padding-bottom: 3.75rem;}
 .success-txt {display: flex;align-items: center;justify-content: space-between;padding: 1.9rem 0 1.2rem;color:#fff;}
 .success-txt span:last-child {font-size: .7rem;color: #4EBBF7;}
-.success-content ul {display: flex;justify-content: space-between;align-items: flex-end;}
+.success-content ul {display: flex;justify-content: space-between;align-items: flex-end;flex-wrap: wrap;}
 .success-content ul li figure {display: flex;align-items: center;}
 .success-content ul li figure img {margin-right: .5rem;}
 .success-content ul li p {padding-bottom: .9rem;}
 .success-content ul li .txt {color:rgba(255,255,255,.5);font-size: .7rem;}
-.success-content ul li button {width: 10.75rem;color: #434561;}
+.success-content ul li button {width: 12.75rem;color: #434561;}
 
 /* 基础信息 */
-.center-basis {display: block;}
-.basis-content {height: 28.1rem;padding: 2.85rem 2.85rem 0 3.2rem;font-size: .8rem;}
+.center-basis {display: none;}
+.basis-content {height: 28.1rem;padding: 2.85rem 2.8rem 0 3.2rem;font-size: .75rem;}
 .basis-head figure,.basis-head figure figcaption {display: flex;align-items: center;}
 .basis-list1 {padding-left: 2.3rem;}
-.basis-list2 {padding-left: 4.6rem;}
+.basis-list2 {padding-left: 1.6rem;}
+.basis-list2 section {display: flex;align-items: center;}
 .basis-list1 section:first-child,.basis-list2 section:first-child {padding-bottom: 1.25rem;}
-.basis-list1 section span:first-child,.basis-list2 section span:first-child {padding-right: 1.5rem;}
-.basis-list1 section:last-child span:first-child {padding-right: 1.2rem;}
-.basis-list2 section:first-child span:first-child {padding-right: .6rem;}
-.basis-list1 .public-blur {padding-left: 1.1rem;}
+
+.basis-list1 section span:first-child,.basis-list2 section span:first-child {padding-right: 1rem;}
+
+.basis-list1 .public-blur {padding-left: .5rem;}
 
 .basis-content h5 {padding: 2.8rem 0 1.3rem .3rem;font-size: .9rem;
   border-bottom: .1rem solid rgba(255,255,255,.2);}
 .basis-content ul {padding: 2.4rem 0 0 .3rem;}
-.basis-content ul li {display: flex;}
-.basis-content ul li .basis-pading {padding: 0 4.1rem 0 2.1rem;}
-.basis-content ul li figure {display: flex;align-items: center;padding-right: 3.6rem;}
+.basis-content ul li section {display: flex;font-size: .6rem;align-items: flex-start;}
+.basis-content ul li .basis-pading {width: 12.1rem;display: block;margin: 0 4rem 0 1.7rem;}
+.basis-content ul li figure {display: flex;padding-right: 1rem;align-items: center;font-size: .75rem;}
 .basis-content ul li figure img {margin-right: 1rem;}
 
 .footer-list {margin-top: 0;}
+
+.kyc-success,.kyc-error,.kyc-go,.kyc-no {display: none;}
+
+/* 媒体查询 适配 */
+html {font-size: 20px;}
+@media (max-width: 767px) {
+  html { font-size: 17px;}
+
+  .center-flex {width: 100%;flex-direction: column;}
+  .center-left {width: 100%;}
+  .center-info {width: 100%;margin-left: 0;padding-top: 2rem;}
+
+  .basis-head figure, .basis-head figure figcaption {flex-wrap: wrap;}
+
+  /* 基础信息 */
+  .basis-content {height: auto;padding: 2.85rem 1rem;}
+  .basis-list1,.basis-list2 {padding-left: 0;}
+  .basis-list1 section:first-child, .basis-list2 section:first-child {padding-bottom: 0;}
+  .basis-list1 section,.basis-list2 section {padding-top: .5rem;}
+  .basis-content ul {padding: 1.2rem 0 0 .3rem;}
+  .basis-content ul li section {flex-wrap: wrap;flex-direction: column;}
+  .basis-content ul li section span {padding-top: .5rem;}
+  .basis-content h5 {padding: 1.8rem 0 1.3rem .3rem}
+  .basis-content ul li .basis-pading {width: 100%;margin: 0;padding-bottom: .5rem;}
+
+  /* 申请中 */
+  .info-contetn {padding: 1.2rem 1rem 2.4rem;}
+  .info-none {padding: 8.2rem 1rem 8.7rem;}
+
+  .success-content ul li:last-child {margin-top: 2rem;}
+
+  .ongoing-list span {padding: .5rem 0 0;}
+
+  .update-content {padding-top: 2rem;justify-content: space-between;}
+  .center-center {width: 70%;margin: 0;}
+  .center-right {flex: 1;padding-left: 1rem;}
+
+  /* .center-right ul li figure */
+}
+
+@media (min-width: 768px) {
+  html { font-size: 18px;} 
+}
+
+@media (min-width: 992px) {
+  html { font-size: 19px;} 
+}
+
+@media (min-width: 1200px) {
+  html { font-size: 20px;}
+  .container {padding: 0;width: 1200px;}
+  .row {margin: 0;}
+}
