--- a/webapp/css/about.css
+++ b/webapp/css/about.css
@@ -48,22 +48,7 @@
 .mask-ipt {position: relative;}
 .mask-ipt section {position: absolute;bottom: .6rem;right: 1.6rem;color:rgba(255,255,255,.2);font-size: .6rem;}
 
-  textarea::-webkit-input-placeholder {
-    /* WebKit browsers */
-    color:rgba(255,255,255,.5);
-  }
-  textarea:-moz-placeholder {
-    /* Mozilla Firefox 4 to 18 */
-    color:rgba(255,255,255,.5);
-  }
-  textarea::-moz-placeholder {
-    /* Mozilla Firefox 19+ */
-    color:rgba(255,255,255,.5);
-  }
-  textarea::-ms-input-placeholder {
-    /* Internet Explorer 10+ */
-    color:rgba(255,255,255,.5);
-  }
+
 
 .footer {background: #2C2D37;}
 .foot-members {display: flex;}
@@ -112,9 +97,20 @@
 html {font-size: 20px;}
 @media (max-width: 767px) {
   html { font-size: 17px;}
-
+  .advantage-list {margin-top: 15rem;}
   .advantage-list .advantage-list-border1 li,.advantage-list .advantage-list-border2 li,.apply-list ul li {border: 0;border-bottom: .15rem solid rgba(255,255,255,.1);}
   .advantage-list .advantage-list-border2 li:last-child,.apply-list ul li:last-child {border: 0;}
+
+  .apply-list ul li {height: auto;padding-bottom: 1.5rem;}
+
+  .use-list ul li {padding: 1rem 0 0 0;}
+  .use-list ul li:last-child {padding-left: 0;}
+
+  .close-mask {margin-right: 0;width: 100%;}
+  .close-mask img {width: 1rem;height: 1rem;margin-bottom: 1rem;}
+  .mask-content {width: 100%;}
+  .about-mask {width: 90%;padding: 0; margin: 0 auto;height: 100%;
+    display: flex;align-items: center;justify-content: center;}
 
   .foot-history {margin: 7.5rem 0 5rem;}
   
