--- a/webapp/css/confirmPhoto.css
+++ b/webapp/css/confirmPhoto.css
@@ -1,21 +1,26 @@
-.confirm-container {background: #68608D;padding: 12.7rem 0 10rem;}
+.confirm-container {background: rgba(70, 74, 99,1);padding: 12.7rem 0 10rem;}
 
 .confirm-content1 {padding: 2.1rem 3rem  1.6rem 2.5rem;}
 .confirm-content2 {padding: 2rem 1.5rem  3.5rem 2.5rem;}
-.session-list,.ipt-list {display: flex;justify-content: space-between;flex-wrap: wrap;}
+.session-list,.ipt-list {display: flex;flex-wrap: wrap;}
+.session-list li:first-child,.ipt-list li:first-child {width: 21rem;}
 .session-list li {color:rgba(255,255,255,.3);font-size: .8rem;display: flex;align-items: center;}
 .session-list li span:last-child {font-size: .6rem;padding-left: 1.5rem;}
+.session-list li:last-child {display: flex;align-items: center;justify-content: space-between;flex: 1;}
+
+.session-list li:first-child span:first-child,.ipt-list li:first-child p {width: 5rem;}
 
 .ipt-list {padding-top: 1.5rem;}
 .ipt-list li {display: flex;align-items: center;color: #fff;font-size: .8rem;position: relative;}
-.ipt-list li p span,.confirm-content2 p span  {color: #FB6363;}
+.ipt-list li p span:first-child,.confirm-content2 p span:first-child  {color: #FB6363;}
 .ipt-list li input {height:1.8rem;background:rgba(44,45,55,.3);border-radius:.5rem;border: 0;color: #fff;
   font-size: .8rem;margin-left: 1.5rem;text-indent: 1rem;}
-.ipt-list li label {position: absolute;top: 2rem;left: 5.9rem;color: #FB6363;font-size: .6rem;}
-.ipt-list li:last-child label {left: 6.9rem;}
+.ipt-list li label {position: absolute;top: 2rem;left: 7.5rem;color: #FB6363;font-size: .6rem;display: none;}
+.ipt-list li:last-child label {left: 6.9rem;display: none;}
+.ipt-list li:last-child {flex: 1;}
 
 .ipt-list li:first-child input {width: 7.8rem;}
-.ipt-list li:last-child input {width: 27rem;}
+.ipt-list li:last-child input {flex: 1;}
 
 .card-list {display: flex;justify-content: space-between;align-items: center;margin-top: 1.9rem;
   background:rgba(44,45,55,.2);}
@@ -44,3 +49,48 @@
 
 .public-title {border-color: #00D69B;}
 .footer-list {margin-top: 0;border-top: 0;}
+
+/* 媒体查询 适配 */
+html {font-size: 20px;}
+@media (max-width: 767px) {
+  html { font-size: 17px;}
+  .confirm-container {padding: 8rem 0 5rem;}
+
+  .confirm-content1,.confirm-content2 {padding: 1.5rem 1rem;}
+  .session-list li:last-child section {padding-top: 1rem;} 
+  .session-list li:last-child {flex-direction: column;align-items: flex-start;}
+  .ipt-list {padding-top:0;}
+  .ipt-list li {padding-top: 1.5rem;}
+  .ipt-list li label {top: 3.4rem;}
+
+  .card-list {flex-direction: column;}
+  .card-list li {padding: 1rem;height: auto;}
+  .card-list li figure .card-img, .card-list li figure .card-img2 {max-width: 100%;}
+  .requirr-list {flex-direction: column;}
+  .requirr-list li:first-child {padding: 0 0 1rem 0;}
+  .requirr-list li span {display: block;text-indent: 2em;}
+
+  
+
+  .topRight {top: -100%;}
+  .bottomLeft {bottom: -100%;}
+
+  .card-list li:first-child figure .centerBottom {left: 0;transform:rotate(90deg);right: 0;top: 99%;}
+  .card-list li:first-child figure .centerTop {bottom: 0;right: 0;transform:rotate(90deg);top: 99%;}
+
+  .card-list li:last-child {border-left: 0;border-top: .05rem solid rgba(120,115,128,.3)}
+}
+
+@media (min-width: 768px) {
+  html { font-size: 18px;} 
+}
+
+@media (min-width: 992px) {
+  html { font-size: 19px;} 
+}
+
+@media (min-width: 1200px) {
+  html { font-size: 20px;}
+  .container {padding: 0;width: 1200px;}
+  .row {margin: 0;}
+}
