--- a/webapp/css/dynamic.css
+++ b/webapp/css/dynamic.css
@@ -1,7 +1,12 @@
 html, body {position: relative;height: 100%;}
 .swiper-container {width: 100%;height: 100%;}
-.swiper-slide {font-size: 18px;color:#fff;box-sizing: border-box;padding: 40px 60px;}
-.swiper-slide:hover {cursor: pointer;}
+.swiper-slide {font-size: 18px;color:#fff;box-sizing: border-box;}
+.swiper-slide img {width: 100%;height: 26rem;}
+.swiper-slide1 {background: url('../images/dynamic/swiperBg1.png') center no-repeat;background-size: cover;}
+.swiper-slide2 {background: url('../images/dynamic/swiperBg2.png') center no-repeat;background-size: cover;}
+.swiper-slide3 {background: url('../images/dynamic/swiperBg3.png') center no-repeat;background-size: cover;}
+
+
 .parallax-bg {position: absolute;left: 0;top: 0;width: 130%;height: 100%;background-size: cover;
   background-position: center;}
 .swiper-slide .title {font-size: 41px;font-weight: 300;margin-top: 5rem;}
@@ -30,3 +35,34 @@ html, body {position: relative;height: 100%;}
 .foot-news .foot-news-more figure img {margin-left: .8rem;width: 1rem;height: 1rem;}
 
 .footer-list {margin-top: 0;}
+
+/* 媒体查询 适配 */
+html {font-size: 20px;}
+@media (max-width: 767px) {
+  html { font-size: 17px;}
+
+  .dynamic-container {height: 10rem;}
+
+  .news-list-bg {padding: 3rem 0;}
+  .foot-news {padding: 2rem 0;}
+  .new-dynamics {height: auto;}
+  .new-dynamics ul li {padding-top: 1rem;}
+  .new-dynamics ul li:first-child {padding-top: 0;}
+  .foot-news ul li .foot-news-tit {flex-direction: column;align-items: flex-start;justify-content: flex-start;}
+  .foot-news ul li .foot-news-tit h4 {padding-bottom: .5rem;}
+  .foot-news .foot-news-more figure {padding-top: 1.3rem;}
+}
+
+@media (min-width: 768px) {
+  html { font-size: 18px;} 
+}
+
+@media (min-width: 992px) {
+  html { font-size: 19px;} 
+}
+
+@media (min-width: 1200px) {
+  html { font-size: 20px;}
+  .container {padding: 0;width: 1200px;}
+  .row {margin: 0;}
+}
